NIFI-13213 Added Validation for Swap File Names